諸々の修正
