# app/interface/handler/dto.py
@@ -1,14 +1,18 @@
 # generated by fastapi-codegen:
 #   filename:  /home/docs/openapi.yml
-#   timestamp: 2023-05-06T11:31:50+00:00
+#   timestamp: 2023-05-06T12:59:03+00:00
 
 from __future__ import annotations
 
 from datetime import datetime
-from typing import Optional
+from typing import List, Optional
 from uuid import UUID
 
 from pydantic import BaseModel, Field, constr
+
+
+class BaseUser(BaseModel):
+    id: UUID = Field(..., description='ユーザID')
 
 
 class Affiliate(BaseModel):
@@ -27,6 +31,7 @@ class Affiliate(BaseModel):
     )
     created_at: datetime = Field(..., description='作成日')
     updated_at: datetime = Field(..., description='更新日')
+    users: Optional[List[BaseUser]] = None
 
 
 class CreateUserRequest(BaseModel):
@@ -38,6 +43,7 @@ class CreateUserRequest(BaseModel):
     email: Optional[constr(max_length=255)] = Field(
         None, description='メールアドレス', example='sample@sample.com'
     )
+    affiliate_id: Optional[UUID] = Field(None, description='加盟組織ID')
 
 
 class UpdateUserRequest(BaseModel):
@@ -68,7 +74,6 @@ class CreateAffiliateRequest(BaseModel):
     email: Optional[constr(max_length=255)] = Field(
         None, description='メールアドレス', example='sample@sample.com'
     )
-    affiliate_id: Optional[UUID] = Field(None, description='加盟組織ID')
 
 
 class UpdateAffiliateRequest(BaseModel):
